[package]
name = "imap-sec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
bytes = "1.6.0"
imap-next = { git = "https://github.com/duesee/imap-next", features = ["expose_stream"] }
imap-codec = { version = "2", features = ["bounded-static", "ext_id", "ext_login_referrals", "starttls"] }
imap-types = { version = "2", features = ["bounded-static", "serde"] }
tokio = { version = "1.38.2", features = ["macros", "rt", "net", "io-util", "time", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[patch.crates-io]
imap-codec = { git = "https://github.com/duesee/imap-codec" }
imap-types = { git = "https://github.com/duesee/imap-codec" }
